--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,8 +27,8 @@
   position: absolute;
   width: 114px;
   height: 170px;
-  bottom: 0;
-  right: 0;
+  bottom: -10px;
+  right: -10px;
   overflow: hidden;
   border-radius: 0px 10px 10px 0px;
 }
