--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,17 @@
   --font-mono: 'Raleway', ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-  --background-color: #000;
+  --background-color: #080808;
   --font-color: #ddd;
   --primary-color: #222831;
   --secondary-color: #393e46;
   --accent-background-color: #98BBF6;
   --accent-font-color: #222831;
   --bs-border-width: 3px;
+
+  --matzang-accent-color: #BB85FC;
+  --matzang-accent-background-color: #6c4e91;
+  --matzang-accent-font-color: #fff;
 }
 
 .btn-primary {
@@ -26,6 +30,24 @@
   --bs-btn-disabled-color: var(--accent-background-color);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: var(--accent-background-color);
+  --bs-gradient: none;
+}
+
+.btn-matzangButton {
+  --bs-btn-bg: var(--matzang-accent-background-color);
+  --bs-btn-color: var(--matzang-accent-font-color);
+  --bs-btn-border-color: var(--matzang-accent-background-color);
+  --bs-btn-hover-color: var(--matzang-accent-font-color);
+  --bs-btn-hover-bg: var(--matzang-accent-background-color);
+  --bs-btn-hover-border-color: var(--matzang-accent-background-color);
+  --bs-btn-focus-shadow-rgb: 13,110,253;
+  --bs-btn-active-color: var(--matzang-accent-font-color);
+  --bs-btn-active-bg: var(--matzang-accent-background-color);
+  --bs-btn-active-border-color: var(--matzang-accent-background-color);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--matzang-accent-background-color);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: var(--matzang-accent-background-color);
   --bs-gradient: none;
 }
 
@@ -58,4 +80,8 @@ a {
   --font-color: #222831;
   --background-color: #fff;
   --primary-color: #DEE2E7;
+}
+
+.matzangText {
+  color: var(--matzang-accent-color);
 }
